--- a/index.html
+++ b/index.html
@@ -2,163 +2,72 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>iNaturalist Query</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f2f2f2;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 50px;
-        }
-        h1 {
-            color: #4CAF50;
-        }
-        form {
-            background-color: #fff;
-            padding: 20px 30px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 100%;
-            max-width: 500px;
-        }
-        input, select, button {
-            width: 100%;
-            padding: 10px;
-            margin: 8px 0;
-            border-radius: 4px;
-            border: 1px solid #ccc;
-        }
-        button {
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #45a049;
-        }
-        #result {
-            margin-top: 20px;
-            padding: 15px;
-            background-color: #fff;
-            border-radius: 8px;
-            width: 100%;
-            max-width: 500px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        #result p {
-            margin: 0;
-            font-size: 18px;
-        }
-        #speciesList {
-            margin-top: 10px;
-            text-align: left;
-        }
-        #speciesList ul {
-            list-style-type: disc;
-            padding-left: 20px;
-        }
-        #apiUrl {
-            font-size: 14px;
-            color: #555;
-            word-wrap: break-word;
-        }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>iNaturalist Flashcards Query</title>
 </head>
 <body>
+    <h1>iNaturalist Flashcards Generator</h1>
 
-    <h1>iNaturalist Query</h1>
-
-    <form id="queryForm">
+    <!-- Form for selecting taxon group and generating the query -->
+    <form id="flashcard-form">
         <label for="group">Select Group:</label>
-        <select id="group" required>
-            <option value="" disabled selected>Select Group</option>
-            <option value="species">Species</option>
-            <option value="class">Class</option>
-            <option value="order">Order</option>
-            <option value="family">Family</option>
-            <!-- Add more options as needed -->
+        <select id="group">
+            <option value="amphibia" selected>Amphibia</option>
+            <option value="reptilia">Reptilia</option>
+            <option value="mammalia">Mammalia</option>
         </select>
+        <br>
 
-        <label for="query">Enter Query (e.g., Danaus plexippus):</label>
-        <input type="text" id="query" name="query" placeholder="Enter group name" required>
-
-        <label for="x_min">X Min (Longitude):</label>
-        <!-- Default value added -->
-        <input type="number" step="any" id="x_min" name="x_min" placeholder="-73.30998835149309" value="-73.30998835149309" required>
-
-        <label for="y_min">Y Min (Latitude):</label>
-        <!-- Default value added -->
-        <input type="number" step="any" id="y_min" name="y_min" placeholder="-3.639567136581359" value="-3.639567136581359" required>
-
-        <label for="x_max">X Max (Longitude):</label>
-        <!-- Default value added -->
-        <input type="number" step="any" id="x_max" name="x_max" placeholder="-72.35967096868059" value="-72.35967096868059" required>
-
-        <label for="y_max">Y Max (Latitude):</label>
-        <!-- Default value added -->
-        <input type="number" step="any" id="y_max" name="y_max" placeholder="-3.3818731533200204" value="-3.3818731533200204" required>
-
-        <label for="num_flashcards">Number of Flashcards (10-100):</label>
-        <input type="number" id="num_flashcards" name="num_flashcards" min="10" max="100" value="10" required>
-
-        <button type="submit">Generate</button>
+        <input type="submit" value="Generate Query">
     </form>
 
-    <div id="result"></div>
+    <h3>Generated Query URL:</h3>
+    <p id="api-url"></p>
+
+    <h3>Total Results:</h3>
+    <p id="total-results">0</p>
+
+    <h3>Species List:</h3>
+    <ul id="species-list"></ul>
 
     <script>
-        document.getElementById('queryForm').addEventListener('submit', async function(event) {
-            event.preventDefault(); // Prevent form from submitting the traditional way
+        document.getElementById('flashcard-form').addEventListener('submit', async function(event) {
+            event.preventDefault();
 
-            // Get form values
+            const nelat = -3.3818731533200204;
+            const nelng = -72.35967096868059;
+            const swlat = -3.639567136581359;
+            const swlng = -73.30998835149309;
+
             const group = document.getElementById('group').value;
-            const query = document.getElementById('query').value.trim();
-            const x_min = document.getElementById('x_min').value;
-            const y_min = document.getElementById('y_min').value;
-            const x_max = document.getElementById('x_max').value;
-            const y_max = document.getElementById('y_max').value;
-            const num_flashcards = document.getElementById('num_flashcards').value;
 
-            // Validate coordinates
-            if (parseFloat(x_min) >= parseFloat(x_max) || parseFloat(y_min) >= parseFloat(y_max)) {
-                alert('Minimum coordinates must be less than maximum coordinates.');
-                return;
-            }
+            // Build the iNaturalist API URL
+            const apiUrl = `https://api.inaturalist.org/v1/observations?iconic_taxa=${group}&nelat=${nelat}&nelng=${nelng}&swlat=${swlat}&swlng=${swlng}&quality_grade=research`;
 
-            // Prepare API URL
-            const apiUrl = `https://api.inaturalist.org/v1/observations?taxon_name=${encodeURIComponent(query)}&rank=${encodeURIComponent(group)}&nelat=${y_max}&nelng=${x_max}&swlat=${y_min}&swlng=${x_min}&per_page=${num_flashcards}`;
+            document.getElementById('api-url').innerText = apiUrl;
 
             try {
-                // Fetch data from iNaturalist API
+                // Fetch the results from iNaturalist API
                 const response = await fetch(apiUrl);
-                if (!response.ok) {
-                    throw new Error(`API request failed with status ${response.status}`);
-                }
-
                 const data = await response.json();
 
-                // Display the API URL used
-                const apiUrlElement = `<p id="apiUrl"><strong>API URL:</strong> <a href="${apiUrl}" target="_blank">${apiUrl}</a></p>`;
+                // Display the total results
+                document.getElementById('total-results').innerText = data.total_results;
 
-                // Display the number of results
-                const totalResults = data.total_results;
-                const resultHtml = `<p><strong>Total Results:</strong> ${totalResults}</p>`;
+                // Clear the species list
+                const speciesList = document.getElementById('species-list');
+                speciesList.innerHTML = '';
 
-                // Extract species names from the results
-                const speciesNames = data.results.map(obs => obs.taxon.preferred_common_name || obs.taxon.name);
-                const speciesListHtml = `<div id="speciesList"><strong>Species Names:</strong><ul>${speciesNames.map(name => `<li>${name}</li>`).join('')}</ul></div>`;
-
-                // Combine all parts and display
-                document.getElementById('result').innerHTML = apiUrlElement + resultHtml + speciesListHtml;
+                // Populate the species list
+                data.results.forEach(result => {
+                    const speciesItem = document.createElement('li');
+                    speciesItem.textContent = result.species_guess || 'Unknown species';
+                    speciesList.appendChild(speciesItem);
+                });
             } catch (error) {
                 console.error('Error fetching data:', error);
-                document.getElementById('result').innerHTML = `<p style="color:red;"><strong>Error:</strong> ${error.message}</p>`;
             }
         });
     </script>
-
 </body>
 </html>
