more specific search field

--- a/index.html
+++ b/index.html
@@ -41,13 +41,34 @@
         li {
             margin-bottom: 5px;
         }
+        #suggestions {
+            border: 1px solid #ccc;
+            max-height: 100px;
+            overflow-y: auto;
+            display: none;
+            position: absolute;
+            background-color: white;
+            z-index: 1;
+        }
+        #suggestions div {
+            padding: 5px;
+            cursor: pointer;
+        }
+        #suggestions div:hover {
+            background-color: #f0f0f0;
+        }
     </style>
 </head>
 <body>
     <h1>iNaturalist Flashcards Generator</h1>
 
-    <!-- Form for selecting coordinates and taxon group -->
     <form id="flashcard-form">
+        <div class="form-section">
+            <label for="taxon-search">Search for Taxon:</label>
+            <input type="text" id="taxon-search" placeholder="Type to search..." autocomplete="off">
+            <div id="suggestions"></div>
+        </div>
+
         <div class="form-section">
             <label for="group">Select Group:</label>
             <select id="group">
@@ -92,6 +113,41 @@
     <ul id="species-list"></ul>
 
     <script>
+        document.getElementById('taxon-search').addEventListener('input', async function() {
+            const searchTerm = this.value;
+            const suggestions = document.getElementById('suggestions');
+            suggestions.innerHTML = '';
+
+            if (searchTerm.length < 3) {
+                suggestions.style.display = 'none';
+                return; // Show suggestions only if at least 3 characters are typed
+            }
+
+            // Fetch taxon suggestions
+            try {
+                const response = await fetch(`https://api.inaturalist.org/v1/taxa/autocomplete?q=${searchTerm}`);
+                const data = await response.json();
+
+                data.results.slice(0, 5).forEach(result => {
+                    const suggestionItem = document.createElement('div');
+                    suggestionItem.textContent = `${result.name} (${result.common_name || 'No common name'})`;
+                    suggestionItem.onclick = () => {
+                        document.getElementById('taxon-search').value = result.id; // Set taxon ID
+                        suggestions.style.display = 'none';
+                    };
+                    suggestions.appendChild(suggestionItem);
+                });
+
+                if (suggestions.innerHTML) {
+                    suggestions.style.display = 'block'; // Show suggestions if there are any
+                } else {
+                    suggestions.style.display = 'none'; // Hide if no suggestions
+                }
+            } catch (error) {
+                console.error('Error fetching taxon suggestions:', error);
+            }
+        });
+
         document.getElementById('flashcard-form').addEventListener('submit', async function(event) {
             event.preventDefault();
 
@@ -100,9 +156,15 @@
             const swlat = document.getElementById('swlat').value;
             const swlng = document.getElementById('swlng').value;
             const group = document.getElementById('group').value;
+            const taxonId = document.getElementById('taxon-search').value;
 
             // Base API URL with query parameters
-            let apiUrl = `https://api.inaturalist.org/v1/observations?iconic_taxa=${group}&nelat=${nelat}&nelng=${nelng}&swlat=${swlat}&swlng=${swlng}&quality_grade=research&per_page=200&page=`;
+            let apiUrl = `https://api.inaturalist.org/v1/observations?iconic_taxa=${group}&nelat=${nelat}&nelng=${nelng}&swlat=${swlat}&swlng=${swlng}&quality_grade=research`;
+
+            // If a specific taxon ID is selected, add it to the query
+            if (taxonId) {
+                apiUrl += `&taxon_id=${taxonId}`;
+            }
 
             // Display the query URL
             document.getElementById('api-url').innerText = apiUrl;
@@ -115,7 +177,7 @@
                 let moreResults = true;
                 while (moreResults) {
                     // Fetch each page of results
-                    const response = await fetch(apiUrl + page);
+                    const response = await fetch(apiUrl + `&per_page=200&page=${page}`);
                     const data = await response.json();
                     
                     if (data.results.length > 0) {
