--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <label for="max-per-species">Max per Species:</label>
         <input type="number" id="max-per-species" placeholder="e.g., 5">
 
-        <button type="submit">Generate</button>
+        <button id="generate">Generate</button>
     </form>
 
     <p id="showing-message"></p>
