--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <label for="max-per-species">Max per Species:</label>
         <input type="number" id="max-per-species" placeholder="e.g., 5">
 
-        <button type="submit">Generate</button>
+        <button id = "generate">Generate</button>
     </form>
 
     <p id="showing-message"></p>
@@ -44,14 +44,16 @@
 
    <div id="flashcards-container" style="display:none;">
         <div id="flashcard">
-            <img id="flashcard-image" src="" alt="Flashcard Image">
-            <div id="flashcard-names" style="display:none;">
+            <div id="flashcard-images" class="image-container" src="" alt="Flashcard Image"></div>
+            <button id="show-button">Show name</button>
+            <div id="flashcard-name" style="display:none;">
                 <p id="common-name"></p>
                 <p id="scientific-name"></p>
             </div>
         </div>
-        <button id="correct">Correct</button>
-        <button id="incorrect">Incorrect</button>
+
+        <button id="correct" disabled>Correct</button>
+        <button id="incorrect" disabled >Incorrect</button>
         <div id="progress">
             <p id="learned-count">Learned: 0</p>
             <p id="remaining-count">Remaining: 0</p>
@@ -60,7 +62,7 @@
 
 
 
-    
+
     <p>Total Results: <span id="total-results"></span></p>
     <ul id="species-list"></ul>
 
